fixed the resizing on smaller screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,11 +123,10 @@ view {
     font-size: 26px;
   }
 
-  
-
-  .side:nth-of-type(2){
+  #county-list{
     display: none;
   }
+
   
   .side:nth-of-type(4){
     margin-top: 10px;
